# target_tiller

./: .gitignore  LICENSE  README.md  env.sample  pyproject.toml
target_tiller/: __init__.py  __main__.py  cli.py  holding.py  portfolio.py  targets.py  transaction.py  transactions_calculator.py  transactions_config.py
target_tiller/balancers/: __init__.py  balancer.py  buy_only_balancer.py  buy_sell_balancer.py  sell_only_balancer.py
target_tiller/demo/: demo.ipynb
target_tiller/demo/files/: demo_portfolio1.yaml  demo_portfolio2.yaml  demo_portfolio3.yaml  demo_targets.yaml  demo_transactions_configs.yaml
target_tiller/input/: __init__.py  files_helper.py  portfolio_loader_yaml.py  targets_loader_yaml.py  td_portfolio_loader_csv.py  transactions_configs_loader_yaml.py
target_tiller/output/: __init__.py  report_html.py  report_json.py  report_jupyter.py  reporter.py  target_tiller.css
tests/fixtures/: fake_portfolio.yaml  fake_targets.yaml  fake_td_portfolio.csv  fake_transactions_configs.yaml
tests/integration/: test_demo.py
tests/unit/: test_cli.py  test_portfolio.py  test_targets.py  test_transactions_calculator.py  test_transactions_config.py
tests/unit/balancers/: test_buy_only_balancer.py  test_buy_sell_balancer.py  test_sell_only_balancer.py
tests/unit/input/: test_files_helper.py  test_portfolio_loader_yaml.py  test_targets_loader_yaml.py  test_td_portfolio_loader_csv.py  test_transactions_configs_loader_yaml.py
tests/unit/output/: test_report_html.py
